src/main/java/com/example/stockservice/exception/error/ErrorMessages.java
package com.example.stockservice.exception.error;

public class ErrorMessages {
    public static final String STOCK_NOT_FOUND = "Stock not found";
    public static final String MARKET_NOT_FOUND = "Market not found";
}
